--- a/app/src/main/res/layout/row_layout.xml
+++ b/app/src/main/res/layout/row_layout.xml
@@ -10,18 +10,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Ciudad"
+        android:textColor="@color/Blanco"
         android:textSize="30dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=" - "
+        android:textColor="@color/Blanco"
         android:textSize="30dp"/>
 
     <TextView
         android:id="@+id/dbDesc_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/Blanco"
         android:textSize="30dp"
         android:text="Descripcion"/>
 </LinearLayout>
